# realworld-rust-axum-sqlx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
src/: launcher.rs  main.rs
src/.deploy/dockerfiles/: Dockerfile  Dockerfile.migration
src/api/: mod.rs  server.rs
src/api/client/: mod.rs
src/api/client/auth/: auth_client.rs  mod.rs
src/api/client/oauth2/: mod.rs  oauth2_client.rs
src/api/client/users/: mod.rs  user_client.rs
src/api/controller/: mod.rs
src/api/controller/auth/: auth_controller.rs  mod.rs
src/api/controller/health/: health_controller.rs  mod.rs
src/api/controller/users/: mod.rs  user_controller.rs
src/api/manager/auth/: auth_manager.rs  auth_response_converter.rs  mod.rs
src/api/manager/users/: mod.rs  user_manager.rs  user_response_converter.rs
src/api/repository/: field_value.rs  mod.rs  pagination.rs  sorting.rs
src/api/repository/users/: mod.rs
src/api/state/auth/: auth_state.rs  mod.rs
src/api/test/: test_context.rs
src/core/: mod.rs
src/core/cors/: cors.rs
src/core/error/: error.rs
src/core/logging/: logging.rs
src/core/request/: mod.rs  pagination.rs  sorting.rs
src/core/response/: constant.rs  mod.rs  response.rs
src/core/security/: authentication.rs  authorization.rs  jwt_manager.rs  mod.rs
src/db/: db.rs
src/db/sql/: 0000__init.sql  0001__users.sql  0002__refresh_tokens.sql
src/job/: kind.rs  message.rs  mod.rs
src/job/consumer/: consumer.rs
src/job/event/: event.rs  mod.rs
src/resources/: application.yaml  config.rs
src/service/: mod.rs
src/service/aws/: mod.rs
src/service/oauth2/: mod.rs  oauth2.rs
src/utils/: datetime_utils.rs  hash_utils.rs  mod.rs
src/worker/: server.rs
(+30 files in other folders)
