[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
config = { version = "0.14.0", features = ["yaml"] }
dotenv = "0.15.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "rt"] }
serde_json = "1.0.128"
async-trait = "0.1.82"
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
bcrypt = "0.15.1"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "runtime-async-std", "derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.63"
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "decompression-full", "trace"] }
sea-query = { version = "0.31.0", features = ["backend-postgres", "derive", "sea-query-derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http = "1.1.0"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
once_cell = "1.19.0"
hyper = "1.4.1"
tower = "0.4.13"
tower-service = "0.3.3"
http-body-util = "0.1.2"
faker_rand = "0.1.1"
rand = "0.8.5"
lazy_static = "1.5.0"
aws-sdk-s3 = "1.49.0"
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-smithy-types = "1.2.6"
aws-smithy-runtime-api = "1.7.2"
futures = "0.3.30"
tempfile = "3.12.0"
aws-sdk-sqs = "1.42.0"
serial_test = "3.1.1"
mockall = "0.13.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["json"] }
